// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/legacy-b34-manual.json 1`] = `
{
  "drawingSha256": "75e455b41e659e98ef2f3118632caa4994d4797b345028a8a25da581730facef",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "3677485a95341a21",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9f8697475cb16a80",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "0fe243e3229953a8",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка.",
    },
    {
      "fingerprint": "2531bcf2976037cd",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка..",
    },
    {
      "fingerprint": "927cb50662f1963e",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "987e844d6e4aff36",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "e31b560cb0317ca5",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "68edd5a412a8f5de",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/legacy-v1-new-fields.json 1`] = `
{
  "drawingSha256": "158cd3f97638ae17f0c9e816781fc958cf0abe6f43475207391b5453ed173dfb",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "3677485a95341a21",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "1ec5c5b8bde4c50a",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "b2869fdcda0f628c",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "a8ca3f3eaf7bd40f",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3)..",
    },
    {
      "fingerprint": "4864a3e7e7e516a7",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "6bd20f8a744274e3",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "e2cf76cea4d0a675",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "f4232471c3d46725",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "3b09f83e0dba609c",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "5d9987354e63381e",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/manual-v1.json 1`] = `
{
  "drawingSha256": "18ebbcce02d204dcd270127b1068a4d6c158ced66712f15a396fa66fcf67c3fe",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "d875846edb3360e6",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "40f099da29566eb4",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "8c0b5f4d1c013be3",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "4864a3e7e7e516a7",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "8876c67ca3fbc438",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "0a8f80afe2606a6c",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "59a2e57e55317283",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "f1bd65141caa8202",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/review-b33-v4.json 1`] = `
{
  "drawingSha256": "f2c4b35ad903cb36420588789331a1556ad44cf12b346f5e90f190243e7b5b2e",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "f772b96e915d2416",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "79a60d7d7aaba39f",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "7073eb7ba0947073",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "5d115d4ff3e3da46",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "5831e08ac2c62c70",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "b305eb6b2800d778",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "57a036857bf6875b",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "2e276063472aabe8",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "88db3e95511a7b48",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/review-b34-v4.json 1`] = `
{
  "drawingSha256": "685ff121e4b8c6684f0496111124b04385da89d55b1a442620b7797430a64a23",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "4e752e43c9f502f5",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "f3a3a843ed783e28",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "0fe243e3229953a8",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка.",
    },
    {
      "fingerprint": "74b52358f6bf3c3d",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка..",
    },
    {
      "fingerprint": "5831e08ac2c62c70",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "b305eb6b2800d778",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "0ceeb207e65f3fd1",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "54e255e97bfa8c9a",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "ff9ae908cf62fa7a",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;
